# IsometricEditor

./: .gitignore  CMakeLists.txt  IsometricGame  README.md  Todo.txt
Assets/map/: test.json
assets/map/: map.json  map2.json
src/: main.cpp
src/Editor/: Editor.cpp  Editor.hpp
src/Game/: Game.cpp  Game.hpp
src/Gui/: Gui.cpp  Gui.hpp
src/MapManager/: MapManager.cpp  MapManager.hpp
src/SpriteSheet/: SpriteSheet.cpp  SpriteSheet.hpp
src/raygui/: raygui.h
